Tue May 27 13:46:52 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (Init_stringio): Define
	  StringIO#{getbyte,readbyte}.

Tue May 27 13:38:51 2008  Akinori MUSHA  <knu@iDaemons.org>

	* io.c (Init_IO): Define {IO,ARGF}#{getbyte,readbyte}.

Tue May 27 13:26:15 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (Init_stringio): Define #bytes and
	  #lines.

Tue May 27 13:20:35 2008  Akinori MUSHA  <knu@iDaemons.org>

	* io.c: (rb_io_lines, rb_io_bytes, Init_IO): Define
	  IO#{lines,bytes} and ARGF.{lines,bytes}.

Tue May 27 12:13:17 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (BUFCHECK): wrong condition. [ruby-core:16921]

	* file.c (file_expand_buf): shouldn't use buflen for length of string.

Mon May 26 18:24:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (BUFCHECK): no resize if enough room.

	* file.c (file_expand_path): use BUFCHECK.

Mon May 26 16:46:19 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (ntfs_tail): filename which starts with '.' is valid.

	* file.c (file_expand_path): cygwin symlink support.

Mon May 26 10:21:24 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* marshal.c (dump_ensure, load_ensure): should return values.

Mon May 26 10:03:35 2008  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (yield_under, yield_under_i, yield_args_under_i)
	  (specific_eval, rb_obj_instance_exec, Init_eval): Implement
	  Object#instance_exec(), a 1.9 feature.

Mon May 26 08:00:52 2008  Akinori MUSHA  <knu@iDaemons.org>

	* marshal.c (r_object0, Init_marshal): Fix the garbled s_call
	  definition; fixes [ruby-dev:34843].

Mon May 26 03:16:20 2008  Akinori MUSHA  <knu@iDaemons.org>

	* hash.c (rb_hash_default): Fix rdoc.
	  (rb_hash_each, env_each_value, env_each_pair): Return an
	  enumerator if no block is given.
	  (rb_hash_update): Update rdoc.
	  (envix): Conditionalize the definition itself.
	  (rb_f_getenv, env_fetch, env_keys, env_values, env_values_at)